fix: align spacing and fonts in inputs
- text field
- text area
- dropdown select
- date picker

--- a/packages/components/src/components/date-picker/date-picker.css
+++ b/packages/components/src/components/date-picker/date-picker.css
@@ -48,8 +48,11 @@ duet-date-picker .duet-date__input {
   border: var(--telekom-line-weight-standard) solid
     var(--telekom-color-ui-border-standard);
   background-color: var(--telekom-color-ui-state-fill-standard);
-  padding: 21px var(--telekom-spacing-unit-x10) 5px calc(var(--spacing-x) - 1px);
+  /*padding: 21px var(--telekom-spacing-unit-x10) 5px calc(var(--spacing-x) - 1px);*/
+  padding: 1.125rem calc(2rem - var(--telekom-spacing-unit-x025)) 0.25rem
+    calc(0.75rem - var(--telekom-spacing-unit-x025));
   height: var(--telekom-spacing-unit-x11);
+  font: var(--telekom-text-style-body);
 }
 
 duet-date-picker .duet-date__input:hover {
@@ -132,7 +135,9 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
 }
 
 .scale-date-picker .date-picker__label {
-  top: -2px;
+  /*top: -2px;*/
+  top: 0;
+  left: 0;
   color: var(--telekom-color-text-and-icon-additional);
   display: flex;
   z-index: var(--z-index-label);
@@ -140,7 +145,7 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   transition: all var(--telekom-motion-duration-transition)
     var(--telekom-motion-easing-standard);
   pointer-events: none;
-  font-size: var(--telekom-spacing-unit-x4);
+  /*font-size: var(--telekom-spacing-unit-x4);
   transform: translate(
     var(--telekom-spacing-unit-x3),
     calc(
@@ -150,7 +155,9 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
         ) / 2
     )
   );
-  font-weight: var(--telekom-typography-font-weight-medium);
+  font-weight: var(--telekom-typography-font-weight-medium);*/
+  font: var(--telekom-text-style-ui);
+  transform: translate(0.75rem, 0.875rem);
 }
 
 duet-date-picker .duet-date__input::placeholder {
@@ -183,14 +190,19 @@ duet-date-picker .duet-date__day {
 .scale-date-picker.scale-date-picker--focus .date-picker__label,
 .scale-date-picker.animated .date-picker__label {
   color: var(--telekom-color-text-and-icon-additional);
-  transform: translate(
+  /*transform: translate(
     var(--telekom-spacing-unit-x3),
     var(--telekom-spacing-unit-x2)
-  );
+  );*/
   transition: all var(--telekom-motion-duration-transition)
     var(--telekom-motion-easing-standard);
-  font-size: var(--telekom-typography-font-size-small);
-  font-weight: var(--telekom-typography-font-weight-bold);
+  /*font-size: var(--telekom-typography-font-size-small);
+  font-weight: var(--telekom-typography-font-weight-bold);*/
+  font: var(--telekom-text-style-small-bold);
+  transform: translate(
+    0.75rem,
+    calc(0.25rem + var(--telekom-spacing-unit-x025))
+  );
 }
 
 .scale-date-picker.animated .duet-date__input::placeholder,
